packages/forge-dsl/fixtures/errors/e12-dead-knot.fable
// expect: FORGE208
-> start

=== start ===
The story goes this way.
-> END

=== forgotten ===
No road leads here.
-> END
